Bug storing file in blockchain